2005-06-29 Stuart Prescott <s.prescott@unimelb.edu.au>
	* change email functions to use the From address of the server and a reply-to of the user that triggered the email to be sent. 

2005-06-27 Stuart Prescott <s.prescott@unimelb.edu.au>
	* 0.9.9.0-1.0rc1

2005-06-24 Stuart Prescott <s.prescott@unimelb.edu.au>
	* bugfix: instrument time slot rule didn't stick on instrument creation 

2005-06-24 Stuart Prescott <s.prescott@unimelb.edu.au>
	* create instrument supervisors 
	* include instrument supervisor (link to email) on the calendar page 
	* send booking to supervisor when booking is made or changed 

2005-06-23 Stuart Prescott <s.prescott@unimelb.edu.au>
	* fix (again) comments in booking slots 

2005-06-20 Stuart Prescott <s.prescott@unimelb.edu.au>
	* billing data exporter for the actual invoicing for accts payable 

2005-06-18 Stuart Prescott <s.prescott@unimelb.edu.au>
	* make PDF export more configurable from ini file 
	* make billing report more informative and include intermediate results too 

2005-06-17 Stuart Prescott <s.prescott@unimelb.edu.au>
	* create interface to allow userclass name to be edited by admin 

2005-06-04 Stuart Prescott <s.prescott@unimelb.edu.au>
	* combined report format as PDF 
	* email PDF reports to either logged in user or to supervisor 

2005-05-31 Stuart Prescott <s.prescott@unimelb.edu.au>
	* added ability to edit instrument class name, add / delete classes 
	* start of invoicing export functions 

2005-05-30 Stuart Prescott <s.prescott@unimelb.edu.au>
	* PDF export improvements  
	* inclusion of the SUM of a column in the export 
	* allow the SQL to be a UNION between different queries  
	* instrument use+consumable combined data export implemented 

2005-05-28 Stuart Prescott <s.prescott@unimelb.edu.au>
	* working PDF export of tablular data with pretty-table, multiline-cells etc 
	* customisation of PDF export not possible yet: fixed fonts, sizes, colours, header image 
