@@ -40,9 +40,10 @@ usualclose = "18:00"
 usualprecision = 900
 usualtimemarks = 4
 ; defaults for the monthly view -- how many weeks should the calendar include, 
-; and how many full weeks history?
+; how many full weeks history and how far in the future can the calendar go?
 usualcallength = 4
 usualcalhistory = 1
+usualcalfuture = 365
 ; default timeslot picture for a new instrument
 usualtimeslotpicture = "[0-6]<08:00-13:00/2;18:00-32:00/1,Overnight booking>"
 ; default length of a "half day" and "full day" for when calculating booking costs
